--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,14 +17,19 @@ body{
 }
 
 #play1{
-    margin-top: 5px;
+    margin-top: 35px;
+    margin-left: 50px;
+
 }
 #play2{
     margin-top: 35px;
+    margin-left: 50px;
+
 }
 #play3{
-    margin-top: 5px;
+    margin-top: 35px;
     margin-left: 50px;
+
 }
 #play4{
     margin-top: 35px;
