--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,3 +110,9 @@ button:hover{
     transition: all 200ms ease-in;
     transform: scale(1.1);
 }
+
+.vez{
+    position: absolute;
+    margin-top: 610px;
+    margin-left: 530px;
+}
