--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,7 @@ body {
 
 .player {
     position: absolute;
-    width: 2.25rem;
+    width: 1.5%;
 }
 
 #play1{
@@ -70,8 +70,8 @@ body {
     width: 20%;
     height: 25%;
     border-radius: 0.938rem;
-    padding: 0.938rem;
-    padding-top: 4.2rem;
+    padding: 1%;
+    padding-top: 2%;
 }
 
 
@@ -93,8 +93,8 @@ body {
     width: 20%;
     height: 25%;
     border-radius: 0.938rem;
-    padding: 0.938rem;
-    padding-top: 4.2rem;
+    padding: 1%;
+    padding-top: 2%;
 }
 
 /* ============ PERGUNTA ========== */
@@ -115,8 +115,8 @@ body {
     width: 20%;
     height: 25%;
     border-radius: 0.938rem;
-    padding: 0.938rem;
-    padding-top: 4.2rem;
+    padding: 1%;
+    padding-top: 2%;
 }
 
 /* ========= DEMAIS ESTILOS */
@@ -186,10 +186,9 @@ button:hover{
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 3.5rem;
     color: white;
     text-align: center;
-    padding-top: 0.5rem;
-    font-size: 1.25rem;
+    margin-bottom: 1%;
+    margin-left: 5%;
 
 }
