--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,11 +8,43 @@
 /* Fonte padrão */
 body {
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
     background: radial-gradient(circle, #2E3C7B 0%, #050319 100%);
     background-size: cover;
 
 }
+
+
+/* ============== TEXTO ================ */
+.texto{
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    color: white;
+    font-size: medium;
+    font-family: Snell Roundhand, cursive;
+}
+
+.texto2{
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    color: white;
+    font-size: medium;
+    font-family: Snell Roundhand, cursive;
+    margin-top: 15%;
+}
+
+.texto3{
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    color: white;
+    font-size: medium;
+    font-family: Snell Roundhand, cursive;
+    margin-top: 15%;
+    padding-left: 0%;
+}
+
 
 /* =============== JOGADORES =========== */
 
@@ -57,7 +89,9 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 5.625rem;
+    width: 30%;
+    font-size: 10%;
+    text-align: center;
 }
 
 #div_dado{
@@ -68,7 +102,7 @@ body {
     margin-left: 75%;
     opacity: 70%;
     width: 20%;
-    height: 25%;
+    height: 26.5%;
     border-radius: 0.938rem;
     padding: 1%;
     padding-top: 2%;
@@ -188,7 +222,10 @@ button:hover{
     width: 100%;
     color: white;
     text-align: center;
-    margin-bottom: 1%;
-    margin-left: 5%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
 }
