--- a/CSS/style-regras.css
+++ b/CSS/style-regras.css
@@ -12,7 +12,7 @@
   --text-color-light: hsl(var(--hue), 4%, 55%);
 
   --body-color: linear-gradient(90deg, #010D48 0%, hsl(247, 63%, 5%) 100%);
-  --container-color: linear-gradient(136deg, hsl(104, 28%, 35%) 0%, hsl(58, 28%, 35%) 100%);
+  --container-color: linear-gradient(90deg, #010D48 0%, hsl(247, 63%, 5%) 100%);
   
 
   --body-font: 'Poppins', sans-serif;
