--- a/game/CSS/style.css
+++ b/game/CSS/style.css
@@ -83,6 +83,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 72%;
+    height: 100vh;
     margin-left: 0rem;
 }
 /* ================ DADO ================= */
