--- a/game/CSS/inicio.css
+++ b/game/CSS/inicio.css
@@ -94,7 +94,7 @@ button{
 .barra div{
     height: 100%;
     border-radius: 10px;
-    background-color: rgb(206, 49, 49);
+    background-color: #FEE333;
 
 
 }
